checks refactoring
