# docs/swagger.json
@@ -631,6 +631,27 @@
                 }
             }
         },
+        "check.Channel": {
+            "type": "object",
+            "required": [
+                "id",
+                "kind"
+            ],
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "kind": {
+                    "$ref": "#/definitions/entity.ChannelKind"
+                },
+                "webhookURL": {
+                    "type": "string"
+                }
+            }
+        },
         "check.Check": {
             "type": "object",
             "required": [
@@ -646,7 +667,7 @@
                 "channels": {
                     "type": "array",
                     "items": {
-                        "type": "integer"
+                        "$ref": "#/definitions/check.Channel"
                     }
                 },
                 "description": {
